<resources>
    <string name="app_name">VolumetricTable</string>
    <string name="title_volumetric_table">Кубатурник</string>
    <string name="title_density">Плотность</string>
    <string name="title_gost">Гост</string>

    <string name="title_trunk_apex">Вершинная часть ствола</string>
    <string name="title_length">Длина, м</string>
    <string name="title_diameter">Диаметр, см</string>
    <string name="title_amount">Количество, шт</string>
    <string name="title_data">Введите данные</string>
    <string name="title_result">Результат</string>
    <string name="title_wood_type">Порода дерева</string>
    <string name="title_moisture">Влажность, %</string>

    <string name="action_add">Добавить</string>
    <string name="density_result_template">%s кг/м3</string>
    <string name="volume_result_template">%s м3</string>

    <string name="error_empty_amount">Заполните количество</string>
    <string name="error_incorrect_volume">Значение не найдено. Пожалуйста, проверьте правильность данных</string>
</resources>