<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_volumetrc_table">

    <fragment
        android:id="@+id/navigation_volumetrc_table"
        android:name="ru.vsokolova.volumetric_table.ui.VolumeTableFragment"
        android:label="@string/title_volumetric_table"
        tools:layout="@layout/fragment_volumetric_table" />

    <fragment
        android:id="@+id/navigation_density"
        android:name="ru.vsokolova.volumetric_table.ui.DensityFragment"
        android:label="@string/title_density"
        tools:layout="@layout/fragment_density" />

    <fragment
        android:id="@+id/navigation_gost"
        android:name="ru.vsokolova.volumetric_table.ui.gost.GostFragment"
        android:label="@string/title_gost"
        tools:layout="@layout/fragment_gost" />
</navigation>