<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:orientation="vertical">

    <CheckBox
        android:id="@+id/checkbox_trunk_apex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_trunk_apex" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/title_length" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/container_length"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="dropdown_menu"
        app:hintEnabled="true">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/text_view_length"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal"
            android:paddingStart="16dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/title_diameter" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/container_thick"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="dropdown_menu"
        app:hintEnabled="true">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/text_view_thick"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:paddingStart="16dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/title_amount" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/container_amount"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="true">

        <EditText
            android:id="@+id/edit_text_amount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="1"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_add"
        android:layout_marginTop="16dp"/>

</LinearLayout>